Version 0.2.8     unreleased

	* Remove `__all__ = []` from __init__.py.
	* Upgrade to poetry-dynamic-versioning v1.9.1 for minor fixes.
	* Add .python-version in preferred order to support pyenv.
	* Fix problem with relative test imports using Pycharm on Linux.
	* Version profiles_settings.xml to control PyCharm inspection profile.
	* Adjust GHA build process to allow builds for stacked PRs.
	* Add a new `run clean` target to clean up generated data.
	* Move unit tests from `tests` into `src/tests/reorder`.
	* Update the MyPy configuration so we're using latest rules.
	* Replace black, isort, and pylint with the Ruff formatter and linter.
	* Address Ruff linter warnings and modernize the code to 2025 standards.
	* Update all dependencies and outdated constraints.

Version 0.2.7     08 Jan 2025

	* Migrate to Poetry v2 and project-managed Poetry plugins.
	* Move configuration into pyproject.toml for pytest, mypy & coverage.
	* Upgrade to gha-shared-workflows@v8 for Poetry v2 support.
	* Fix resource not closed bug exposed by pytest warnings->errors config.
	* Update all dependencies and outdated constraints.

Version 0.2.6     02 Jan 2025

	* Add GitHub security policy in SECURITY.md.
	* Pull in latest version of run-script-framework.
	* Update dependencies to address Dependabot warnings.
	* Upgrade to gha-shared-workflows@v7 with publish improvements.
	* Add a default .pytest.ini file based on new cookiecutter template.
	* Change the default branch in GitHub from master to main.

Version 0.2.5     15 Oct 2024

	* Pull in latest updates from run-script-framework.
	* Simplify GHA integration with coveralls.io.
	* Update transitive dependencies to address Dependabot warnings.
	* Add support for Python v3.13, no need to drop older versions.
	* Upgrade to Poetry v1.8.4 for official Python 3.13 support.

Version 0.2.4     26 Feb 2024

	* Upgrade to Poetry v1.8.0 and make related adjustments.
	* Disable Python keyring via poetry.toml.