@@ -1,6 +1,7 @@
 Version 0.2.8     unreleased
 
 	* Remove `__all__ = []` from __init__.py.
+	* Add a new 'suite -f' command to run faster subset of the suite.
 	* Upgrade to poetry-dynamic-versioning v1.9.1 for minor fixes.
 	* Add .python-version in preferred order to support pyenv.
 	* Fix problem with relative test imports using Pycharm on Linux.
